items list page

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -15,6 +15,9 @@
     {{/if}}
   </p>
 
+  {{! -- PLACEHOLDER ITEMS LIST --}}
+  <a href="/itemListing">Items List</a>
+
   {{!-- PLACEHOLDER LOGOUT --}}
   <a href="/logout">logout</a>
 </section>
