--- a/views/home.hbs
+++ b/views/home.hbs
@@ -15,6 +15,12 @@
     {{/if}}
   </p>
 
+  {{!--- PLACEHOLDER ITEMS ---}}
+  <a href="/listItems">ITEMS LIST</a> 
+
+
+
   {{!-- PLACEHOLDER LOGOUT --}}
   <a href="/logout">logout</a>
+
 </section>
