update on list items layout

--- a/views/listItems.hbs
+++ b/views/listItems.hbs
@@ -9,8 +9,8 @@
             <label for="item"> PLACEHOLDER FOR ITEM 1</label>
             <!--- ask about items database - do we make it? or use mongodb db??? ---> 
             
-            <button type="button" class="btn btn-primary">Modify </button>
-            <button type="button" class="btn btn-primary">Remove </button>
+            <button type="button" class="btn btn-primary"> <!--- redirect to modify item <ahref=""> </ahref> --->  Modify </button>
+            <button type="button" class="btn btn-primary"> <!--- <a href=""> </a> --->  Remove </button>
         </div>
 
     </div>
