itemsList and createItems update

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -16,8 +16,7 @@
   </p>
 
   {{! -- PLACEHOLDER ITEMS LIST --}}
-  <a href="/itemListing">Items List</a>
-
+  <a href="/itemListing" class="btn btn-info" role="button">Items List</a>
   {{!-- PLACEHOLDER LOGOUT --}}
-  <a href="/logout">logout</a>
+  <a href="/logout" class="btn btn-info" role="button">logout</a>
 </section>
