--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,8 +1,24 @@
 <section>
-<div class="row">
-    <div class="col-md-4">
-    </div>
-    <div class="col-md-4">
-        <h1>{{username}}</h1>
-</div>
-</section>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow "> 
+        <a class="navbar-brand ml-5" href="/">
+            <span class="black-text">WebMart</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            {{!-- left side--}}
+            <ul class="navbar-nav">
+            </ul>
+            {{!-- right side--}}
+            <ul class="navbar-nav ml-auto mr-5">
+                <div class="r-flex">
+                   <span class="black-text">{{username}}</span>
+                    </li>
+                </div>
+            </ul>
+        </div>
+    </nav>
+<section>
+
+
