--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -13,12 +13,23 @@
             {{!-- right side--}}
             <ul class="navbar-nav ml-auto mr-5">
                 <div class="r-flex">
-                   <span class="black-text">{{username}}</span>
+                   <li class="nav-item ml-4">
+                        <a class="nav-link" href="/listitem"> LIST ITEM <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item ml-4 mr-4">
+                        <a class="nav-link" href="/friends"> FRIEND LIST <span class="sr-only">(current)</span></a>
                     </li>
                 </div>
             </ul>
         </div>
     </nav>
+
+   <div class="content-wrapper"> 
+
+
+
+    
+    <div>
 <section>
 
 
