--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -25,11 +25,14 @@
     </nav>
 
    <div class="content-wrapper"> 
+    <div class="col-md-6 p-5">
+        <h1>{{username}}</h1>
+
+    </div>
 
 
 
-    
-    <div>
+   <div>
 <section>
 
 
