--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -27,10 +27,13 @@
    <div class="content-wrapper"> 
     <div class="col-md-6 p-5">
         <h1>{{username}}</h1>
-
     </div>
-
-
+        <div class="col-md-6 d-flex align-items-center">
+            <div class="">
+                <h1>Personal Information</h1>
+                <p></p>
+            </div>
+        </div>
 
    <div>
 <section>
