Added refactoring(html, singleton MongoDB) and new User class
Refactored landing page, added singleton pattern to MongoDB in new MongoConnection.js file

Added new User classes so that user attributes can be shared to pages easily

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -49,7 +49,7 @@
               <span style="color:rgb(255, 75, 75)">{{logged_in}}</span>
               <br />
               Current user is
-              <span style="color:rgb(255, 75, 75)">{{username}}</span>
+              <span style="color:rgb(255, 75, 75)">{{userObj.username}}</span>
               {{#if isAdmin}}
                 and is an 
                 <span style="color:rgb(255, 75, 75)">Admin</span>
