--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -1,63 +1,98 @@
 <section>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow "> 
-        <a class="navbar-brand ml-5" href="/">
-            <span class="black-text">Auction</span>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            {{!-- left side--}}
-            <ul class="navbar-nav">
-            </ul>
-            {{!-- right side--}}
-            <ul class="navbar-nav ml-auto mr-5">
-                <div class="r-flex">
-                    <li class="nav-item ml-4">
-                        <a class="nav-link" href="/login">LOGIN <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item ml-4 mr-4">
-                        <a class="nav-link" href="/register">REGISTER <span class="sr-only">(current)</span></a>
-                    </li>
-                </div>
-            </ul>
-        </div>
-    </nav>
+   {{!-- TODO: Update navbar, add logo, add links to page sections --}}
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow "> 
+    
+    <a class="navbar-brand ml-5" href="/">
+      <span class="black-text">Auction</span>
+    </a>
+    
+    <button 
+        class="navbar-toggler" 
+        type="button" 
+        data-toggle="collapse" 
+        data-target="#navbarNav" 
+        aria-controls="navbarNav" 
+        aria-expanded="false" 
+        aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="collapse navbar-collapse" id="navbarNav">
+      
+      {{!-- All elements here appear on the left side of the navbar --}}
+      <ul class="navbar-nav"></ul>
+      
+      {{!-- All elements here appear on the right side of the navbar --}}
+      <ul class="navbar-nav ml-auto mr-5 r-flex">
+        <li class="nav-item ml-4">
+          <a class="nav-link" href="/login">LOGIN <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item ml-4 mr-4">
+          <a class="nav-link" href="/register">REGISTER <span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
 
-<div class="content-wrapper"> 
-
-    <div class="row">
-        <div class="col-md-6 p-5">
-            {{!-- PLACEHOLDER --}}
-            <img src="\images\web.png" class="img-fluid"> 
-        </div>
-        <div class="col-md-6 d-flex align-items-center">
-            <div class="">
-                <h1>Explanation Text</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquam fringilla augue sed tincidunt. Etiam quis lacinia ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id venenatis risus. Nullam in dui pellentesque est pharetra ullamcorper at in nisl. Sed imperdiet magna ut tellus hendrerit finibus. Maecenas rhoncus sem vitae imperdiet ultricies. Nam vitae sem dictum, congue arcu nec, tincidunt tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-            </div>
-        </div>
     </div>
 
-    {{!-- Small Space --}}
+  </nav>
+    
+  <div class="content-wrapper">
+  
+    <div class="row">
+      
+      <div class="col-md-6 p-5">
+        {{!-- TODO: insert landing page image --}}
+        <img src="\images\web.png" class="img-fluid" alt="Image showcasing what our browser app can do for users">
+      </div>
+
+      <div class="col-md-6 d-flex align-items-center">
+        
+        <div class="">
+          {{!-- TODO: insert landing page explanation and text --}}
+          <h1>Explanation Text</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquam fringilla augue sed
+            tincidunt. Etiam quis lacinia ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla
+            id venenatis risus. Nullam in dui pellentesque est pharetra ullamcorper at in nisl. Sed imperdiet
+            magna ut tellus hendrerit finibus. Maecenas rhoncus sem vitae imperdiet ultricies. Nam vitae sem
+            dictum, congue arcu nec, tincidunt tortor. Interdum et malesuada fames ac ante ipsum primis in
+            faucibus.</p>
+        </div>
+
+      </div>
+    </div>
+  
+    {{!-- Space between row elements --}}
     <br>
-
+  
     <div class="row">
-        <div class="col-md-4 debugBG">
-            <h3>Info Text 1</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquam fringilla augue sed tincidunt. Etiam quis lacinia ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id venenatis risus. Nullam in dui pellentesque est pharetra ullamcorper at in nisl. Sed imperdiet magna ut tellus hendrerit finibus. Maecenas rhoncus sem vitae imperdiet ultricies. Nam vitae sem dictum, congue arcu nec, tincidunt tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-            
-        </div>
-        <div class="col-md-4 debugBG">
-            <h3>Info Text 2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquam fringilla augue sed tincidunt. Etiam quis lacinia ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id venenatis risus. Nullam in dui pellentesque est pharetra ullamcorper at in nisl. Sed imperdiet magna ut tellus hendrerit finibus. Maecenas rhoncus sem vitae imperdiet ultricies. Nam vitae sem dictum, congue arcu nec, tincidunt tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-        </div>
-        <div class="col-md-4 debugBG">
-            <h3>Info Text 3</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquam fringilla augue sed tincidunt. Etiam quis lacinia ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id venenatis risus. Nullam in dui pellentesque est pharetra ullamcorper at in nisl. Sed imperdiet magna ut tellus hendrerit finibus. Maecenas rhoncus sem vitae imperdiet ultricies. Nam vitae sem dictum, congue arcu nec, tincidunt tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-        </div>
+      
+      {{!-- TODO: insert text explaining what our app is, its functions, and user capabilities --}}
+      <div class="col-md-4 debugBG">
+        <h3>Info Text 1</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquam fringilla augue sed tincidunt.
+          Etiam quis lacinia ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id venenatis
+          risus. Nullam in dui pellentesque est pharetra ullamcorper at in nisl. Sed imperdiet magna ut tellus
+          hendrerit finibus. Maecenas rhoncus sem vitae imperdiet ultricies. Nam vitae sem dictum, congue arcu
+          nec, tincidunt tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+      </div>
+
+      <div class="col-md-4 debugBG">
+        <h3>Info Text 2</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquam fringilla augue sed tincidunt.
+          Etiam quis lacinia ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id venenatis
+          risus. Nullam in dui pellentesque est pharetra ullamcorper at in nisl. Sed imperdiet magna ut tellus
+          hendrerit finibus. Maecenas rhoncus sem vitae imperdiet ultricies. Nam vitae sem dictum, congue arcu
+          nec, tincidunt tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+      </div>
+       
+      <div class="col-md-4 debugBG">
+        <h3>Info Text 3</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquam fringilla augue sed tincidunt.
+          Etiam quis lacinia ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id venenatis
+          risus. Nullam in dui pellentesque est pharetra ullamcorper at in nisl. Sed imperdiet magna ut tellus
+          hendrerit finibus. Maecenas rhoncus sem vitae imperdiet ultricies. Nam vitae sem dictum, congue arcu
+          nec, tincidunt tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+      </div>
     </div>
-
-</div>
-
+  </div>
 </section>
