--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -29,10 +29,15 @@
         <h1>{{username}}</h1>
     </div>
         <div class="col-md-6 d-flex align-items-center">
-            <div class="">
-                <h1>Personal Information</h1>
-                <p></p>
-            </div>
+             <div class="col-md-4 debugBG">
+            <h3>Friends List</h2>
+            <p>Shows ur friends </p>        
+      </div>
+        <div class="col-md-4 debugBG">
+            <h3>Items List</h2>
+            <p> Shows purchased items  </p>
+            
+        </div>
         </div>
 
    <div>
