--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -1,7 +1,7 @@
 <section>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow "> 
         <a class="navbar-brand ml-5" href="/">
-            <span class="black-text">Auction</span>
+            <span class="black-text">WebMart</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,8 +33,8 @@
         </div>
         <div class="col-md-6 d-flex align-items-center">
             <div class="">
-                <h1>Explanation Text</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquam fringilla augue sed tincidunt. Etiam quis lacinia ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id venenatis risus. Nullam in dui pellentesque est pharetra ullamcorper at in nisl. Sed imperdiet magna ut tellus hendrerit finibus. Maecenas rhoncus sem vitae imperdiet ultricies. Nam vitae sem dictum, congue arcu nec, tincidunt tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                <h1>WebMart</h1>
+                <p> WebMart is an online retail service where users can sell or buy items that are tailored towards each user's preferences. </p>
             </div>
         </div>
     </div>
@@ -44,17 +44,17 @@
 
     <div class="row">
         <div class="col-md-4 debugBG">
-            <h3>Info Text 1</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquam fringilla augue sed tincidunt. Etiam quis lacinia ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id venenatis risus. Nullam in dui pellentesque est pharetra ullamcorper at in nisl. Sed imperdiet magna ut tellus hendrerit finibus. Maecenas rhoncus sem vitae imperdiet ultricies. Nam vitae sem dictum, congue arcu nec, tincidunt tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+            <h3>Seller </h2>
+            <p> (seller description) </p>
             
         </div>
         <div class="col-md-4 debugBG">
-            <h3>Info Text 2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquam fringilla augue sed tincidunt. Etiam quis lacinia ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id venenatis risus. Nullam in dui pellentesque est pharetra ullamcorper at in nisl. Sed imperdiet magna ut tellus hendrerit finibus. Maecenas rhoncus sem vitae imperdiet ultricies. Nam vitae sem dictum, congue arcu nec, tincidunt tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+            <h3>Buyer</h2>
+            <p> (buyer description)</p>
         </div>
         <div class="col-md-4 debugBG">
-            <h3>Info Text 3</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquam fringilla augue sed tincidunt. Etiam quis lacinia ligula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla id venenatis risus. Nullam in dui pellentesque est pharetra ullamcorper at in nisl. Sed imperdiet magna ut tellus hendrerit finibus. Maecenas rhoncus sem vitae imperdiet ultricies. Nam vitae sem dictum, congue arcu nec, tincidunt tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+            <h3>BLANK</h2>
+            <p> (description) </p>
         </div>
     </div>
 
