--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -34,7 +34,7 @@
         <div class="col-md-6 d-flex align-items-center">
             <div class="">
                 <h1>WebMart</h1>
-                <p>WebMart is an online retail service where users can sell or buy items that are tailored towards each user's preferences.</p>
+                <p>WebMart is an online retail service where users can sell or buy items that are tailored towards each user's preferences. WebMart uniquely has an interactive social aspect, where users can stay up-to-date with their friend's purchases and share their own status.</p>
             </div>
         </div>
     </div>
