--- a/views/listItems.hbs
+++ b/views/listItems.hbs
@@ -19,10 +19,10 @@
                         <a class="nav-link" href="/">[placeholder link] <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ml-4">
-                        <a href="/" class="btn btn-info" role="button">Buy Items [placeholder button]</a>
+                        <a class="nav-link" href="/">Buy Items [placeholder button]</a>
                     </li>
                     <li class="nav-item ml-4 mr-4">
-                        <a href="/createItem" class="btn btn-info" role="button">Add New Item</a>
+                        <a class="nav-link" href="/createItem">Add New Item</a>
                     </li>
                 </div>
             </ul>
@@ -33,7 +33,7 @@
 
     <div class="row">
         <div class="col-md-6 d-flex align-items-center">
-                <h1><h1>Items List PLACEHOLDER</h1></h1>
+                <h1><h1>Items List</h1></h1>
         </div>
     </div>
 
