--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,7 +3,8 @@
     <div class="col-md-4">
     </div>
     <div class="col-md-4">
-        <h1>LOGIN PLACEHOLDER</h1>
+        <br>
+        <h1>Login</h1>
         <form action="/login" method="POST" id="login-form">
             <div class="form-group">   
                 <label for="email">Email</label>
@@ -14,8 +15,9 @@
                 <input type="password" class="form-control" name="password" placeholder="Password">
             </div>
             {{!-- <input class="login-text" type="submit" value = "login"/><br> --}}
-            <button type="submit" class="btn btn-primary">Submit</button>
-            <div class="login-text"><a href="/registration">create new account</a> </div>
+            <button type="submit" class="btn btn-primary">Submit</button> 
+            <br> <br>
+            <div class="login-text"><a href="/register">Create New Account</a> </div>
             </div>
         </form>
     </div>
