--- a/views/createItems.hbs
+++ b/views/createItems.hbs
@@ -2,7 +2,7 @@
     <div class="col-md-4">
     </div>
     <div class="col-md-4">
-        <h1>Add New Item</h1>
+        <h1><br>Add New Item</h1>
         <form action="/register" method="POST" id="register-form">
         <script>
             const queryString = window.location.search;
