updated more merge errors

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -33,9 +33,6 @@
         </div>
     </div>
 
-  {{!--- PLACEHOLDER ITEMS ---}}
-  <a href="/listItems">ITEMS LIST</a> 
-
   {{!-- PLACEHOLDER PROFILE PAGE --}}
   <a href="/profile">View Profile </a>
   &nbsp;
@@ -47,7 +44,7 @@
 
   {{!-- PLACEHOLDER LOGOUT --}}
 
-  <a href="/logout">logout</a>
+  <a href="/logout">Logout</a>
     {{!-- Small Space --}}
     <br>
     <br>
