--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,7 +1,7 @@
 <section>
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow "> 
         <a class="navbar-brand ml-5" href="/logout">
-            <span class="black-text">logout</span>
+            <span class="black-text">Logout</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -17,7 +17,7 @@
                         <a class="nav-link" href="/">[placeholder link] <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ml-4 mr-4">
-                        <a class="nav-link" href="/overview">Overview/ItemListing <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/itemListing"> View Item List <span class="sr-only">(current)</span></a>
                     </li>
                 </div>
             </ul>
