--- a/views/listItems.hbs
+++ b/views/listItems.hbs
@@ -3,7 +3,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow "> 
         <a class="navbar-brand ml-5" href="/logout">
-            <span class="black-text">logout</span>
+            <span class="black-text">Logout</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
