updated image for landing page

--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -41,7 +41,7 @@
     <div class="row">
         <div class="col-md-6 p-5">
             {{!-- PLACEHOLDER --}}
-            <img src="\images\web.png" class="img-fluid"> 
+            <img src="\images\landing-pg.png" class="img-fluid"> 
         </div>
         <div class="col-md-6 d-flex align-items-center">
             <div class="">
