--- a/views/home.hbs
+++ b/views/home.hbs
@@ -15,13 +15,16 @@
             <ul class="navbar-nav ml-auto mr-5">
                 <div class="r-flex">
                     <li class="nav-item ml-4">
-                        <a class="nav-link" href="/">[placeholder link] <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/"> Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ml-4 mr-4">
                         <a class="nav-link" href="/itemListing">View Items List <span class="sr-only">(current)</span></a>
                     </li>
                      <li class="nav-item ml-4">
                         <a class="nav-link" href="/friends">Friends <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item ml-4">
+                        <a class="nav-link" href="/profile">Profile  <span class="sr-only">(current)</span></a>
                     </li>
                 </div>
             </ul>
@@ -39,18 +42,17 @@
   {{!--- PLACEHOLDER ITEMS ---}}
   {{!--- <a href="/listItems">ITEMS LIST</a>  ? ---}} 
 
-  {{!-- PLACEHOLDER PROFILE PAGE --}}
+  {{!-- PLACEHOLDER PROFILE PAGE
   <a href="/profile">View Profile </a>
-  &nbsp;
+  &nbsp; --}}
   
-  {{! -- PLACEHOLDER ITEMS LIST --}}
+  {{! -- PLACEHOLDER ITEMS LIST 
  <a href="/itemListing">View Items List</a>
-    &nbsp;
+    &nbsp;--}}
 
-  {{!-- PLACEHOLDER LOGOUT --}}
-
+  {{!-- PLACEHOLDER LOGOUT 
   <a href="/logout">Logout</a>
-    {{!-- Small Space --}}
+    Small Space--}}
     <br>
     <br>
     <div class="row">
@@ -67,14 +69,6 @@
                 <span style="color:rgb(245, 50, 50)">Admin</span>
               {{/if}}
             </p>
-        </div>
-        <div class="col-md-4 debugBG">
-            <h3>Info Text 2</h2>
-            <p>...</p>        
-      </div>
-        <div class="col-md-4 debugBG">
-            <h3>Info Text 3</h2>
-            <p>...</p>
         </div>
     </div>
 
