--- a/views/listItems.hbs
+++ b/views/listItems.hbs
@@ -16,10 +16,10 @@
             <ul class="navbar-nav ml-auto mr-5">
                 <div class="r-flex">
                     <li class="nav-item ml-4">
-                        <a class="nav-link" href="/">[placeholder link] <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/"> Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ml-4">
-                        <a class="nav-link" href="/">Buy Items [placeholder button]</a>
+                        <a class="nav-link" href="/">Buy Items </a>
                     </li>
                     <li class="nav-item ml-4 mr-4">
                         <a class="nav-link" href="/createItem">Add New Item</a>
@@ -40,34 +40,35 @@
     {{!-- Small Space --}}
     <br>
 
-    <div class="row">
+    <div class="row justify-content-md-center">
         <div class="col-md-4 debugBG">
-            <h3>User Status</h3>
-            <p>
-              User logged in?
-              <span style="color:rgb(255, 75, 75)">{{logged_in}}</span>
-              <br />
-              Current user is
-              <span style="color:rgb(255, 75, 75)">{{username}}</span>
-              {{#if isAdmin}}
-                and is an 
-                <span style="color:rgb(255, 75, 75)">Admin</span>
-              {{/if}}
-            </p>
-        </div>
-        <div class="col-md-4 debugBG">
-
-            <h3>Overview Page Description</h2>
-            <p>Shows all items the user is selling currently. [See why I want to combine these?]</p>        
-      </div>
-        <div class="col-md-4 debugBG">
-            <h3>List Item Page Description</h2>
-            <p> Page that contains a list of all items being sold by the user. User can click “add new” to add a new item they are selling to the page.
-                Users can modify, remove all items they list. Buying items, takes users to a page/interface that pops up where they finalize details.
-                Has Setting to make purchase public. </p>
-            
+            <div class ="col col-lg-2">
+                <h3>User Status</h3>
+                <p>
+                User logged in?
+                <span style="color:rgb(255, 75, 75)">{{logged_in}}</span>
+                <br />
+                Current user is
+                <span style="color:rgb(255, 75, 75)">{{username}}</span>
+                {{#if isAdmin}}
+                    and is an 
+                    <span style="color:rgb(255, 75, 75)">Admin</span>
+                {{/if}}
+                </p>
+            </div>
         </div>
     </div>
-
+    <br>
+    <div class="row justify-content-md-center">
+        <div class="col-md-4 debugBG">
+            <div class ="col col-lg-2">
+                <h3>Items</h3>
+                <p>
+                Current items:
+                <span style="color:rgb(255, 75, 75)">{{username}}</span>
+                </p>
+            </div>
+        </div>    
+    </div>
   </div>
 </section>
