added selenium tests

--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -25,10 +25,10 @@
       {{!-- All elements here appear on the right side of the navbar --}}
       <ul class="navbar-nav ml-auto mr-5 r-flex">
         <li class="nav-item ml-4">
-          <a class="nav-link" href="/login">Login <span class="sr-only">(current)</span></a>
+          <a class="nav-link" id="Login" href="/login">Login<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item ml-4 mr-4">
-          <a class="nav-link" href="/register">Register <span class="sr-only">(current)</span></a>
+          <a class="nav-link" id="Register" href="/register">Register<span class="sr-only">(current)</span></a>
         </li>
       </ul>
 
