--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,14 +9,14 @@
         <form action="/login" method="POST" id="login-form">
             <div class="form-group">   
                 <label for="email">Email</label>
-                <input class="form-control" type="email" name="email" placeholder="Enter email"/><br>
+                <input class="form-control" id="email" type="email" name="email" placeholder="Enter email"/><br>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" name="password" placeholder="Password">
+                <input type="password" id="password" class="form-control" name="password" placeholder="Password">
             </div>
             {{!-- <input class="login-text" type="submit" value = "login"/><br> --}}
-            <button type="submit" class="btn btn-primary">Submit</button> 
+            <button type="submit" id = "submit" class="btn btn-primary">Submit</button> 
             <br> <br>
             <div class="login-text"><a href="/register">Create New Account</a> </div>
             </div>
