--- a/views/friendProfile.hbs
+++ b/views/friendProfile.hbs
@@ -32,7 +32,6 @@
 
    <div class="content-wrapper"> 
      <div class="col-md-6 p-5">
-
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <div id="profile">
             <image id="profile-img" src="http://lorempixel.com/100/100" />
@@ -40,8 +39,8 @@
         <input id="img-upload" type="file" 
             name="profile photo" placeholder="Photo" required="" capture>
           <div>
-            <h1>Account Name : {{username}}</h1>
-            <h1>Email : {{email}}</h1>
+            <h1>Account Name : {{userObj.username}}</h1>
+            <h1>Email : {{userObj.email}}</h1>
         </div>
         {{!-- <img src="{{img}}" alt="insert profile image" class="img-rounded">
         <h4>{{username}}</h4> --}} 
@@ -54,34 +53,12 @@
                 <p>{{about}}
 
                 </p>
-                <button onclick="editAvailable()">Edit Profile</button>
-            </div>
-            <!--Editing Section Will be hided-->
-            <div class="col-md-4 debugBG" style ="display: none;"  id="aboutEdit">
-                <h2 style = "display: none;">About</h2>
-                <input class="input-text" type = "text" style = "width:220px;height:100px;font-size:30px;">
-                <button onclick=" editDisable()" id="aboutEdit">Conforim Profile</button>
             </div>
         <div class="col-md-4 debugBG">
             <h3>Items List</h2>
             <p>Shows purchase history</p>
         </div>
         </div>
-        <script>
-            function editAvailable(){
-                $('#aboutInfo').hide();
-                $('#aboutEdit').show();
-            }
-            function editDisable()
-            {
-                var el = document.getElementsByClassName('input-text');
-                for(var i=0; i<el.length; i++){
-	                el[i].value = '';
-                }
-                $('#aboutInfo').show();
-                $('#aboutEdit').hide();
-            }          
-        </script>
      </div>
     </div>
 
