Update : add some css, designed friendlist page

--- a/public/style.css
+++ b/public/style.css
@@ -87,6 +87,17 @@ body::-webkit-scrollbar {
     border: 2px dashed rgb(0, 0, 0);
 }
 
+.fullBG {
+  background-color: rgb(255,248,224);
+  background-size: cover;
+  height: 100vh;
+}
+
+.friendBG{
+   background-color: rgb(199,236,255);
+   border: 2px dashed rgb(0, 0, 0); 
+}
+
 /* profile picture */ 
 #profile {
     width: 150px;
