--- a/public/style.css
+++ b/public/style.css
@@ -23,7 +23,7 @@ body::-webkit-scrollbar {
 }
 
 .nav-link:hover {
-    color: rgb(140, 173, 172) !important;
+    color: rgb(126, 160, 185) !important;
 }
 
 .r-flex {
@@ -83,8 +83,8 @@ body::-webkit-scrollbar {
 } 
 
 .debugBG{
-    background-color: rgb(117, 161, 255);
-    border: 2px dashed rgb(0, 0, 0);
+    background-color: rgb(172, 166, 230);
+    border: 1px solid rgb(0, 0, 0);
 }
 
 .fullBG {
@@ -95,7 +95,7 @@ body::-webkit-scrollbar {
 
 .friendBG{
    background-color: rgb(199,236,255);
-   border: 2px dashed rgb(0, 0, 0); 
+   border: 2px solid rgb(0, 0, 0); 
 }
 
 /* profile picture */ 
@@ -119,6 +119,5 @@ body::-webkit-scrollbar {
 }
 
 #profile-img {
-
     cursor: pointer;
 }
