--- a/views/home.hbs
+++ b/views/home.hbs
@@ -6,21 +6,24 @@
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-        </button>
+        </button>   
         <div class="collapse navbar-collapse" id="navbarNav">
             {{!-- left side--}}
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ">
+                <li class="nav-item ml-4 mr-4">
+                    <a class="nav-link" href="/profile">View Profile <span class="sr-only"></span>
+                </li>
             </ul>
             {{!-- right side--}}
             <ul class="navbar-nav ml-auto mr-5">
                 <div class="r-flex">
-                    <li class="nav-item ml-4">
-                        <a class="nav-link" href="/">[placeholder link] <span class="sr-only">(current)</span></a>
+                    <li class="nav-item ml-4 mr-4">
+                        <a class="nav-link" href="/">Explore Items <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ml-4 mr-4">
                         <a class="nav-link" href="/itemListing">View Items List <span class="sr-only">(current)</span></a>
                     </li>
-                     <li class="nav-item ml-4">
+                     <li class="nav-item ml-4 mr-4">
                         <a class="nav-link" href="/friends">Friends <span class="sr-only">(current)</span></a>
                     </li>
                 </div>
@@ -28,33 +31,40 @@
         </div>
     </nav>
   
-  <div class="content-wrapper"> 
+  <br> 
+  <br> 
 
-    <div class="row">
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h2 class="jumbotron-heading">Home Page</h2>
+        </div>
+    </section>
+  {{!--- <div class="row">
         <div class="col-md-6 d-flex align-items-center">
                 <h1><h1>Home Page</h1></h1>
         </div>
-    </div>
+    </div> --}}
+
+  <div class="content-wrapper"> 
 
   {{!--- PLACEHOLDER ITEMS ---}}
   {{!--- <a href="/listItems">ITEMS LIST</a>  ? ---}} 
 
-  {{!-- PLACEHOLDER PROFILE PAGE --}}
+  {{!-- PLACEHOLDER PROFILE PAGE 
   <a href="/profile">View Profile </a>
-  &nbsp;
+  &nbsp;--}}
   
-  {{! -- PLACEHOLDER ITEMS LIST --}}
+  {{! -- PLACEHOLDER ITEMS LIST 
  <a href="/itemListing">View Items List</a>
-    &nbsp;
+    &nbsp;--}}
 
   {{!-- PLACEHOLDER LOGOUT --}}
-  <a href="/logout">Logout</a>
+  {{!-- <a href="/logout">Logout</a> --}}
   
     {{!-- Small Space --}}
-    <br>
-    <br>
+
     <div class="row">
-        <div class="col-md-4 debugBG">
+        <div class="container-fluid ">
             <h3>User Status</h3>
             <p>
               User logged in?
@@ -68,15 +78,84 @@
               {{/if}}
             </p>
         </div>
-        <div class="col-md-4 debugBG">
-            <h3>Info Text 2</h2>
-            <p>...</p>        
-      </div>
-        <div class="col-md-4 debugBG">
-            <h3>Info Text 3</h2>
-            <p>...</p>
-        </div>
-    </div>
+         </div>
 
+        <center> 
+     
+        <div class="col-sm-9 debugBG">
+            <h3>{{userObj.username}} Friends </a></h2>
+            <div class="row">
+
+                <div class="col-xs-8 col-sm-6">
+                    <div class="card mb-4 box-shadow">
+                        <div class="card-header"> <p class="card-text">friend1 username </p></div>
+                        <div class="card-body">
+                        <p class="card-text">description of what friend1 just bought.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            {{!--<div class="btn-group">
+                            </div>
+                            <small class="text-muted">9 mins</small>--}}
+                        </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xs-4 col-sm-6">
+                    <div class="card mb-4 box-shadow">
+                        <div class="card-header"> <p class="card-text">friend1 username </p></div>
+                        <div class="card-body">
+                        <p class="card-text">description of what friend1 just bought.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            {{!--<div class="btn-group">
+                            </div>
+                            <small class="text-muted">9 mins</small>--}}
+                        </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                 <div class="col-xs-8 col-sm-6">
+                    <div class="card mb-4 box-shadow">
+                        <div class="card-header"> <p class="card-text">friend1 username </p></div>
+                        <div class="card-body">
+                        <p class="card-text">description of what friend1 just bought.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            {{!--<div class="btn-group">
+                            </div>
+                            <small class="text-muted">9 mins</small>--}}
+                        </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-xs-4 col-sm-6">
+                    <div class="card mb-4 box-shadow">
+                        <div class="card-header"> <p class="card-text">friend1 username </p></div>
+                        <div class="card-body">
+                        <p class="card-text">description of what friend1 just bought.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            {{!--<div class="btn-group">
+                            </div>
+                            <small class="text-muted">9 mins</small>--}}
+                        </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
+        <br> 
+        <br> 
+
+        <div class=".col-md-6 .col-md-offset-3 debugBG">
+            <h3>Recommended Items</h2>
+            <p>...</p>        
+        </div>
+
+        </center>
   
 </section>
