--- a/public/style.css
+++ b/public/style.css
@@ -83,6 +83,6 @@ body::-webkit-scrollbar {
 } 
 
 .debugBG{
-    background-color: rgb(117, 161, 255);
-    border: 2px dashed rgb(0, 0, 0);
+    background-color: rgb(183, 161, 203);
+    border: 1px solid rgb(0, 0, 0);
 }
