edit profile page

--- a/views/editProfile.hbs
+++ b/views/editProfile.hbs
@@ -87,6 +87,10 @@
                 <input class="form-control" name="username" placeholder="Enter new Username"/><br>
                 <p id="incorrect_username" name="incorrect_username"></p>
             </div>
+             <div class="form-group">   
+                <label for="about">About</label>
+                <input class="form-control" name="about" placeholder="Enter information about you"/><br>
+            </div>
             <div class="form-group">
                 <label for="password">Password</label>
                 <input type="password" class="form-control" name="password" placeholder="Change Password">
