updated front end

--- a/views/listItems.hbs
+++ b/views/listItems.hbs
@@ -28,15 +28,17 @@
             </ul>
         </div>
     </nav>
-  
-  <div class="content-wrapper"> 
+    
+    <br> 
+    <br> 
 
-    <div class="row">
-        <div class="col-md-6 d-flex align-items-center">
-                <h1><h1>Items List</h1></h1>
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h2 class="jumbotron-heading">Items List</h2>
         </div>
-    </div>
+    </section>
 
+  <div class="content-wrapper"> 
     {{!-- Small Space --}}
     <br>
 
