--- a/views/friendsList.hbs
+++ b/views/friendsList.hbs
@@ -1,45 +1,88 @@
 <section>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow "> 
-        <a class="navbar-brand ml-5" href="/logout">
-            <span class="black-text">Logout</span>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow "> 
+        <a class="nav-item ml-4 mr-4" href="/logout">
+            <span class="nav-link">Logout</span>
+        </a>
+        <a class="nav-item ml-4 mr-4" href="/profile">
+            <span class="nav-link">View Profile</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-        </button>
+        </button>   
         <div class="collapse navbar-collapse" id="navbarNav">
-            {{!-- left side--}}
-            <ul class="navbar-nav">
-            </ul>
             {{!-- right side--}}
             <ul class="navbar-nav ml-auto mr-5">
                 <div class="r-flex">
+                    <li class="nav-item ml-4 mr-4">
+                        <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
                     <li class="nav-item ml-4">
                         <a class="nav-link" href="/"> Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ml-4 mr-4">
-                        <a class="nav-link" href="/itemListing"> View Item List <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/itemListing">View Items List <span class="sr-only">(current)</span></a>
                     </li>
-                     <li class="nav-item ml-4">
-                        <a class="nav-link" href="/friends"> Friends <span class="sr-only">(current)</span></a>
+                     <li class="nav-item ml-4 mr-4">
+                        <a class="nav-link" href="/friends">Friends <span class="sr-only">(current)</span></a>
                     </li>
                 </div>
             </ul>
         </div>
     </nav>
-    
-    <div class="row">
-    <div class="col-md-4">
-    </div>
-    <div class="col-md-4">
-        <h1><br><br>Friends</h1>
-        <form action="/register" method="POST" id="register-form">
-        <script>
-            const queryString = window.location.search;
-            const urlParams = new URLSearchParams(queryString);
-            const error = urlParams.get('error');
-        </script>
-        </form>
+
+    <br> 
+    <br> 
+
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h2 class="jumbotron-heading">Friends</h2>
         </div>
+    </section>
+
+   <div class="content-wrapper"> 
+     <div>
+         <div class="row">
+            <div class="col-md-8 friendBG" style="position:absolute; left:280px; top:450px; height:480px">
+                {{!--List the current user's friend array. View Profile. Delete Friend --}}
+            <br>
+            <h2 class="text-center">My Friends</h2>
+            {{#each userObj.friends}}
+            <li>{{this}}
+                <form action ='/viewProfile' method="GET" id="get-form" style ="display: inline;">               
+                    <input type = "hidden" value = {{this}} name ="friendprofile">
+                    <input type = "submit" value ="View Profile" name = "view" 
+                    style="background: transparent; border : none">
+                </form>
+                <form action ='/delete_friend' method="POST" id="request-form" style ="display: inline;">               
+                    <input type = "hidden" value = {{this}} name ="friendlist">
+                <input type = "submit" value ="Delete" name = "delete">
+                </form>
+            </li>
+            {{/each}}
+            </div>
+        {{!--Get the list of Friend Requests. Accept,Decline possible --}}
+         <div class="col-md-4 debugBG" id = "menu1" style="position:absolute; left:1000px; top:250px; height:150px">
+            <br>
+            <h3 class="text-center">Friend Requests</h3>
+            {{#each userObj.friend_requests}}
+            <form action ='/accept_friend' method="POST" id="request-form">               
+                    <input type = "hidden" value = {{this}} name ="friendlist">
+                <li>{{this}}<input type = "submit" value ="Accept" name = "accept">
+                <input type = "submit" value ="Decline" name = "decline"></li>
+            </form>
+            {{/each}}
+         </div>
+        {{!--Search user and send the Request --}}
+         <div class="col-md-4 debugBG" style="position:absolute; left:220px; top:250px;">
+            <br>
+            <h2 class="text-center">Add Friends</h2>
+            <form action = '/friend_requests' method = "POST" id="request-form" style="display: inline;">
+            <div class="form-group">
+                <input type="addUsername" class="form-control" name="addUsername" placeholder="Enter Username"/>
+                <br>
+                <input type="submit" id="OK" value="Request" style="display:inline">
+            </div>
+            </form>
+            </div>
     </div>
     <div class="col-md-4">
     </div>
