--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -14,7 +14,7 @@
             <ul class="navbar-nav ml-auto mr-5">
                 <div class="r-flex">
                     <li class="nav-item ml-4">
-                        <a class="nav-link" href="/">[placeholder link] <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ml-4 mr-4">
                         <a class="nav-link" href="/itemListing"> View Item List <span class="sr-only">(current)</span></a>
@@ -26,34 +26,45 @@
             </ul>
         </div>
     </nav>
+    <br> 
+    <br> 
+
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h2 class="jumbotron-heading">My Profile</h2>
+        </div>
+    </section>
 
    <div class="content-wrapper"> 
-     <div class="col-md-6 p-5">
-
+     <div class="col-md-6 p-5" style="position:absolute; left: 50px; top:230px; height:480px">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <div id="profile">
             <image id="profile-img" src="http://lorempixel.com/100/100" />
         </div>
-        <input id="img-upload" type="file" 
-            name="profile photo" placeholder="Photo" required="" capture>
-        
-        {{!-- <img src="{{img}}" alt="insert profile image" class="img-rounded">
-        <h4>{{username}}</h4> --}} 
-    
-    <br>
+        <input id="img-upload" type="file" name="profile photo" placeholder="Photo" required="" capture>
+        <div style="position:absolute; left:280px; top:100px; height:480px">
+            <h4>Account Name : {{username}}</h4>
+            <h4>Email : {{email}}</h4>
+        </div>
+        <br>
 
         <div class="row">
-            <div class="col-md-4 debugBG">
-            <h2>About</h2>
-            <p>
-                Insert information from user: {{about}}
-            </p>
+            <div class="col-md-4 friendBG" id="aboutInfo" style="display: block; position:absolute; left:700px; top:50px; height:200px" onclick="editAvailable()">
+                <br>
+                <h2>About</h2>
+                <p>{{about}}
+
+                </p>
+                <button onclick="editAvailable()">Edit Profile</button>
             </div>
-        <div class="col-md-4 debugBG">
-            <h3>Friends List</h2>
-            <p>...</p>        
-      </div>
-        <div class="col-md-4 debugBG">
+            <!--Editing Section Will be hided-->
+            <div class="col-md-4 friendBG" style ="display: none;"  id="aboutEdit">
+                <h2 style = "display: none;">About</h2>
+                <input class="input-text" type = "text" style = "width:220px;height:100px;font-size:30px;">
+                <button onclick=" editDisable()" id="aboutEdit">Conforim Profile</button>
+            </div>
+        <div class="col-md-4 friendBG" style="display: block; position:absolute; left:1200px; top:50px; height:200px">
+            <br>
             <h3>Items List</h2>
             <p>...</p>
         </div>
