--- a/views/listItems.hbs
+++ b/views/listItems.hbs
@@ -16,13 +16,13 @@
             <ul class="navbar-nav ml-auto mr-5">
                 <div class="r-flex">
                     <li class="nav-item ml-4">
-                        <a class="nav-link" href="/"> Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/home"> Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item ml-4">
-                        <a class="nav-link" href="/">Buy Items </a>
+                        <a class="nav-link" href="/home">Buy Items </a>
                     </li>
                     <li class="nav-item ml-4 mr-4">
-                        <a class="nav-link" href="/createItem">Add New Item</a>
+                        <a class="nav-link" href="/createItem">Sell Item</a>
                     </li>
                 </div>
             </ul>
@@ -30,45 +30,30 @@
     </nav>
   
   <div class="content-wrapper"> 
-
     <div class="row">
         <div class="col-md-6 d-flex align-items-center">
-                <h1><h1>Items List</h1></h1>
+                <h1><h1>My Items List</h1></h1>
         </div>
     </div>
 
     {{!-- Small Space --}}
     <br>
-
-    <div class="row justify-content-md-center">
-        <div class="col-md-4 debugBG">
-            <div class ="col col-lg-2">
-                <h3>User Status</h3>
-                <p>
-                User logged in?
-                <span style="color:rgb(255, 75, 75)">{{logged_in}}</span>
-                <br />
-                Current user is
-                <span style="color:rgb(255, 75, 75)">{{username}}</span>
-                {{#if isAdmin}}
-                    and is an 
-                    <span style="color:rgb(255, 75, 75)">Admin</span>
-                {{/if}}
-                </p>
-            </div>
-        </div>
-    </div>
     <br>
-    <div class="row justify-content-md-center">
-        <div class="col-md-4 debugBG">
-            <div class ="col col-lg-2">
-                <h3>Items</h3>
-                <p>
-                Current items:
-                <span style="color:rgb(255, 75, 75)">{{username}}</span>
-                </p>
+        {{#each myItems}}            
+            <div class="col-md-4 debugBG">
+                    <img src="/images/item/{{this.image}}"  id="profile-img" width="130px"></img>
+                    <h4>{{this.name}}</h4>
+                    <h5>Price : ${{this.price}}</h5>
+                    <h5><P>Description of Item :</P></h5>
+                    <p>{{this.description}}</p>
+                    <p>Selling by : {{this.seller}}</p>
+                    <p>Uploaded on : {{this.creationDate}}</p>
+                    {{!--Here is fomring to delete items--}}
+                    <form action ='/deleteItem' method="POST" id="request-form">               
+                        <input type = "hidden" value = {{this._id}} name ="item">
+                        <input type = "submit" value = "cancel" name = "delete">
+                    </form>
             </div>
-        </div>    
-    </div>
-  </div>
+        {{/each}}    
+     </div>
 </section>
