Update : edit profile done

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -41,11 +41,11 @@
    <div class="content-wrapper"> 
      <div class="col-md-6 p-5">
         <div id="profile">
-            <img src="/images/profile/{{userObj.img}}"  id="profile-img"></img>
+            <img src="/images/profile/{{img}}"  id="profile-img"></img>
         </div>
           <div>
-            <h1>Account Name : {{userObj.username}}</h1>
-            <h1>Email : {{userObj.email}}</h1>
+            <h1>Account Name : {{username}}</h1>
+            <h1>Email : {{email}}</h1>
         </div>
         <br>
 
